--- a/Calculator/Views/MainWindow.xaml
+++ b/Calculator/Views/MainWindow.xaml
@@ -8,48 +8,70 @@
         
         Title="Calculator" 
         Height="515"
-        Width="515"
+        Width="335"
         MinHeight="500"
         MinWidth="320"
-        WindowStartupLocation="CenterScreen">
+        WindowStartupLocation="CenterScreen"
+        Background="#FFE6E6E6">
 
+    <Window.Resources>
+        <Style x:Key="MemoryGrid" TargetType="Grid">
+            <Style.Resources>
+                <Style BasedOn="{StaticResource MemoryButtons}" TargetType="Button"/>
+            </Style.Resources>
+        </Style>
+        <Style x:Key="KeyboardGrid" TargetType="Grid">
+            <Style.Resources>
+                <Style BasedOn="{StaticResource NumberButtons}" TargetType="Button"/>
+            </Style.Resources>
+        </Style>
+    </Window.Resources>
+    
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="40"/>
             <RowDefinition Height="97*"/>
-            <RowDefinition Height="35*" MaxHeight="75"/>
+            <RowDefinition Height="30*" MaxHeight="75"/>
             <RowDefinition Height="309*"/>
         </Grid.RowDefinitions>
 
-        <!--Functions on top-->
-        <Grid>
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
-                <Button Content="☰" Command="" Width="40"/>
-                <TextBlock Text="Here is the name of calculator" VerticalAlignment="Center" FontSize="20"/>
-                <Button Content="◳" Command="" Width="40"/>
-            </StackPanel>
+        <!--Calculator name-->
+        <TextBlock 
+            Text="Standart" 
+            FontSize="20" 
+            VerticalAlignment="Center"
+            Margin="10,0,0,0"/>
 
-            <Button Content="⟲" Command="" Width="40" HorizontalAlignment="Right"/>
-        </Grid>
-        
         <!--Display-->
-        <TextBlock Text="0" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" FontSize="50" FontWeight="Bold" FontFamily="Microsoft JhengHei"/>
+        <TextBlock 
+            Text="0" 
+            Margin="0,0,10,0"
+            Grid.Row="1" 
+            HorizontalAlignment="Right" 
+            VerticalAlignment="Center" 
+            FontSize="43" 
+            FontWeight="Bold" 
+            FontFamily="Microsoft JhengHei"/>
 
         <!--Memory buttons-->
-        <Grid Grid.Row="2" >
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
-                <Button Content="MC" Command="" Width="75"/>
-                <Button Content="MR" Command="" Width="75"/>
-                <Button Content="M+" Command="" Width="75"/>
-                <Button Content="M-" Command="" Width="75"/>
-                <Button Content="MS" Command="" Width="75"/>
-            </StackPanel>
+        <Grid Grid.Row="2" Margin="3, 0, 3, 0" Style="{StaticResource MemoryGrid}">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
 
-            <Button Content="Mˇ" Command="" Width="75" HorizontalAlignment="Right"/>
+            <Button Content="MC" Command="" Grid.Column="0"/>
+            <Button Content="MR" Command="" Grid.Column="1"/>
+            <Button Content="M+" Command="" Grid.Column="2"/>
+            <Button Content="M-" Command="" Grid.Column="3"/>
+            <Button Content="MS" Command="" Grid.Column="4"/>
         </Grid>
 
         <!--Keyboard-->
-        <Grid Grid.Row="3">
+        <Grid Grid.Row="3" Margin="3, 0, 3, 3" Style="{StaticResource KeyboardGrid}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
                 <ColumnDefinition/>
@@ -65,35 +87,35 @@
                 <RowDefinition/>
             </Grid.RowDefinitions>
 
-            <Button Content="%" Command="" Grid.Row="0" Grid.Column="0"/>
-            <Button Content="CE" Command="" Grid.Row="0" Grid.Column="1"/>
-            <Button Content="C" Command="" Grid.Row="0" Grid.Column="2"/>
-            <Button Content="⌫" Command="" Grid.Row="0" Grid.Column="3"/>
+            <Button Content="%" Command="" Grid.Row="0" Grid.Column="0" Style="{StaticResource OperationButtons}"/>
+            <Button Content="CE" Command="" Grid.Row="0" Grid.Column="1" Style="{StaticResource OperationButtons}"/>
+            <Button Content="C" Command="" Grid.Row="0" Grid.Column="2" Style="{StaticResource OperationButtons}"/>
+            <Button Content="⌫" Command="" Grid.Row="0" Grid.Column="3" Style="{StaticResource OperationButtons}"/>
 
-            <Button Content="1/x" Command="" Grid.Row="1" Grid.Column="0"/>
-            <Button Content="x²" Command="" Grid.Row="1" Grid.Column="1"/>
-            <Button Content="√x" Command="" Grid.Row="1" Grid.Column="2"/>
-            <Button Content="÷" Command="" Grid.Row="1" Grid.Column="3"/>
+            <Button Content="1/x" Command="" Grid.Row="1" Grid.Column="0" Style="{StaticResource OperationButtons}"/>
+            <Button Content="x²" Command="" Grid.Row="1" Grid.Column="1" Style="{StaticResource OperationButtons}"/>
+            <Button Content="√x" Command="" Grid.Row="1" Grid.Column="2" Style="{StaticResource OperationButtons}"/>
+            <Button Content="÷" Command="" Grid.Row="1" Grid.Column="3" Style="{StaticResource OperationButtons}"  FontSize="21"/>
 
             <Button Content="7" Command="" Grid.Row="2" Grid.Column="0"/>
             <Button Content="8" Command="" Grid.Row="2" Grid.Column="1"/>
             <Button Content="9" Command="" Grid.Row="2" Grid.Column="2"/>
-            <Button Content="×" Command="" Grid.Row="2" Grid.Column="3"/>
+            <Button Content="×" Command="" Grid.Row="2" Grid.Column="3" Style="{StaticResource OperationButtons}"  FontSize="21"/>
 
             <Button Content="4" Command="" Grid.Row="3" Grid.Column="0"/>
             <Button Content="5" Command="" Grid.Row="3" Grid.Column="1"/>
             <Button Content="6" Command="" Grid.Row="3" Grid.Column="2"/>
-            <Button Content="-" Command="" Grid.Row="3" Grid.Column="3"/>
+            <Button Content="-" Command="" Grid.Row="3" Grid.Column="3" Style="{StaticResource OperationButtons}"  FontSize="21"/>
 
             <Button Content="1" Command="" Grid.Row="4" Grid.Column="0"/>
             <Button Content="2" Command="" Grid.Row="4" Grid.Column="1"/>
             <Button Content="3" Command="" Grid.Row="4" Grid.Column="2"/>
-            <Button Content="+" Command="" Grid.Row="4" Grid.Column="3"/>
+            <Button Content="+" Command="" Grid.Row="4" Grid.Column="3" Style="{StaticResource OperationButtons}" FontSize="21"/>
 
             <Button Content="+/-" Command="" Grid.Row="5" Grid.Column="0"/>
             <Button Content="0" Command="" Grid.Row="5" Grid.Column="1"/>
             <Button Content="," Command="" Grid.Row="5" Grid.Column="2"/>
-            <Button Content="=" Command="" Grid.Row="5" Grid.Column="3"/>
+            <Button Content="=" Command="" Grid.Row="5" Grid.Column="3" Style="{StaticResource ResultButton}"/>
         </Grid>
     </Grid>
 </Window>
