--- a/Calculator/Styles/Buttons.xaml
+++ b/Calculator/Styles/Buttons.xaml
@@ -2,6 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:Calculator.Styles">
 
+    <!--#region Brushes-->
     <SolidColorBrush x:Key="Button.Static.Background" Color="#FFDDDDDD"/>
     <SolidColorBrush x:Key="Button.Static.Border" Color="#FF707070"/>
     <SolidColorBrush x:Key="Button.MouseOver.Background" Color="#FFC3C3C3"/>
@@ -11,7 +12,9 @@
     <SolidColorBrush x:Key="Button.Disabled.Background" Color="#FFF4F4F4"/>
     <SolidColorBrush x:Key="Button.Disabled.Border" Color="#FFADB2B5"/>
     <SolidColorBrush x:Key="Button.Disabled.Foreground" Color="#FF838383"/>
-    
+    <!--#endregion-->
+
+    <!--#region Styles-->
     <Style x:Key="FocusVisual">
         <Setter Property="Control.Template">
             <Setter.Value>
@@ -21,11 +24,10 @@
             </Setter.Value>
         </Setter>
     </Style>
-
-    <Style x:Key="AllButtons" TargetType="Button">
+    
+    <!--Base buttons style-->
+    <Style x:Key="BaseButtonStyle" TargetType="Button">
         <Setter Property="Margin" Value="0.5"/>
-        <Setter Property="FontFamily" Value="Microsoft JhengHei"/>
-
         <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual}"/>
         
         <Setter Property="Background" Value="{StaticResource Button.Static.Background}"/>
@@ -65,29 +67,48 @@
         </Setter>
     </Style>
 
-    <Style x:Key="MemoryButtons" BasedOn="{StaticResource AllButtons}" TargetType="Button">
+    <!--Memory buttons style-->
+    <Style x:Key="MemoryButton" BasedOn="{StaticResource BaseButtonStyle}" TargetType="Button">
         <Setter Property="Background">
             <Setter.Value>
-                <SolidColorBrush Color="#FFF0F0F0" Opacity="0"/>
+                <SolidColorBrush Color="#FFDADADA" Opacity="0"/>
             </Setter.Value>
         </Setter>
-        <Setter Property="FontWeight" Value="Bold"/>
-    </Style> 
-
-    <Style x:Key="NumberButtons" BasedOn="{StaticResource AllButtons}" TargetType="Button">
-        <Setter Property="Background" Value="#FFFAFAFA"/>
-        <Setter Property="FontSize" Value="18"/>
+        
+        <Setter Property="FontFamily" Value="Microsoft JhengHei"/>
         <Setter Property="FontWeight" Value="Bold"/>
     </Style>
 
-    <Style x:Key="OperationButtons" BasedOn="{StaticResource AllButtons}" TargetType="Button">
+    <!--Number buttons style-->
+    <Style x:Key="NumberButton" BasedOn="{StaticResource BaseButtonStyle}" TargetType="Button">
+        <Setter Property="Background" Value="#FFFAFAFA"/>
+        
+        <Setter Property="FontFamily" Value="Microsoft JhengHei UI"/>
+        <Setter Property="FontSize" Value="18"/>
+        <Setter Property="FontWeight" Value="Bold"/> 
+    </Style>
+    
+    <!--#region Operations-->
+    <!--Base operations buttons style-->
+    <Style x:Key="OperationButton" BasedOn="{StaticResource BaseButtonStyle}" TargetType="Button">
         <Setter Property="Background" Value="#FFDADADA"/>
+    </Style>
+    
+    <!--Basic operations buttons style (+, -, *, /, =)-->
+    <Style x:Key="BasicOperationButton" BasedOn="{StaticResource OperationButton}" TargetType="Button">
+        <Setter Property="FontFamily" Value="Microsoft YaHei Light"/>
+        <Setter Property="FontSize" Value="27"/>
+    </Style>
+    
+    <!--Additional operations buttons style (%, CE, C, ⌫, ...)-->
+    <Style x:Key="AdditionalOperationButton" BasedOn="{StaticResource OperationButton}" TargetType="Button">
+        <Setter Property="FontFamily" Value="Microsoft JhengHei UI"/>
         <Setter Property="FontSize" Value="14"/>
     </Style>
-
-    <Style x:Key="ResultButton" BasedOn="{StaticResource AllButtons}" TargetType="Button">
+    
+    <!--Result button style-->
+    <Style x:Key="ResultButton" BasedOn="{StaticResource BasicOperationButton}" TargetType="Button">
         <Setter Property="Background" Value="#FF8ABAE0"/>
-        <Setter Property="FontSize" Value="21"/>
 
         <Setter Property="Template">
             <Setter.Value>
@@ -102,12 +123,13 @@
                         </Trigger>
                         <Trigger Property="IsPressed" Value="true">
                             <Setter Property="Background" TargetName="border" Value="#FF0078D7"/>
-                            <Setter Property="BorderBrush" TargetName="border" Value="#FF3178B1"/>
+                            <Setter Property="BorderBrush" TargetName="border" Value="#FF3A8ED0"/>
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
     </Style>
-    
+    <!--#endregion Operations-->
+    <!--#endregion Styles-->
 </ResourceDictionary>
