--- a/Calculator/Views/MainWindow.xaml
+++ b/Calculator/Views/MainWindow.xaml
@@ -9,7 +9,7 @@
         Title="Calculator" 
         Height="515"
         Width="335"
-        MinHeight="500"
+        MinHeight="506"
         MinWidth="320"
         WindowStartupLocation="CenterScreen"
         Background="#FFE6E6E6">
@@ -42,6 +42,7 @@
                 Width="40"/>
         </StackPanel>
 
+        <!--"Views" for various calculators are displayed here-->
         <ContentControl Grid.Row="1">
             <local:StandartCalculatorControl/>
         </ContentControl>
