--- a/Calculator/Styles/Buttons.xaml
+++ b/Calculator/Styles/Buttons.xaml
@@ -2,12 +2,6 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:Calculator.Styles">
 
-    <ResourceDictionary x:Key="ButtonBrushes">
-        <ResourceDictionary.MergedDictionaries>
-            <ResourceDictionary Source="Brushes.xaml"/>
-        </ResourceDictionary.MergedDictionaries>
-    </ResourceDictionary>
-    
     <Style x:Key="FocusVisual">
         <Setter Property="Control.Template">
             <Setter.Value>
@@ -19,7 +13,7 @@
     </Style>
     
     <!--Base button style-->
-    <Style x:Key="BaseButtonStyle" TargetType="Button" Resources="{StaticResource ButtonBrushes}">
+    <Style x:Key="BaseButtonStyle" TargetType="Button">
         <Setter Property="Margin" Value="0.5"/>
         <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual}"/>
 
