--- a/Calculator/Styles/Colors.xaml
+++ b/Calculator/Styles/Colors.xaml
@@ -2,7 +2,8 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:Calculator.Styles">
 
-    <!--#region Button brushes-->
+    <!--#region Button colors-->
+    <!--Default-->
     <SolidColorBrush x:Key="Button.Static.Background" Color="Transparent" />
     <SolidColorBrush x:Key="Button.Static.Border" Color="#FF707070"/>
     <SolidColorBrush x:Key="Button.MouseOver.Background" Color="#FFC3C3C3"/>
@@ -12,8 +13,14 @@
     <SolidColorBrush x:Key="Button.Disabled.Background" Color="#FFF4F4F4"/>
     <SolidColorBrush x:Key="Button.Disabled.Border" Color="#FFADB2B5"/>
     <SolidColorBrush x:Key="Button.Disabled.Foreground" Color="#FF838383"/>
+
+    <!--Number-->
     <SolidColorBrush x:Key="NumberButton.Static.Background" Color="#FFFAFAFA"/>
+
+    <!--Operation-->
     <SolidColorBrush x:Key="OperationButton.Static.Background" Color="#FFDADADA"/>
+
+    <!--Result-->
     <SolidColorBrush x:Key="ResultButton.Static.Background" Color="#FF8ABAE0"/>
     <SolidColorBrush x:Key="ResultButton.MouseOver.Background" Color="#FF3A8ED0"/>
     <SolidColorBrush x:Key="ResultButton.MouseOver.Border" Color="#FF3178B1"/>
