--- a/Calculator/Views/MainWindow.xaml
+++ b/Calculator/Views/MainWindow.xaml
@@ -6,6 +6,10 @@
         xmlns:local="clr-namespace:Calculator.Views"
         mc:Ignorable="d"
         
+        WindowStyle="None"
+        AllowsTransparency="True"
+        
+        
         Title="Calculator" 
         Height="515"
         Width="335"
