--- a/Calculator/Views/MainWindow.xaml
+++ b/Calculator/Views/MainWindow.xaml
@@ -7,45 +7,78 @@
         xmlns:vm="clr-namespace:Calculator.ViewModels"
         mc:Ignorable="d"
         
+        AllowsTransparency="True"
+        WindowStyle="None"
+        WindowStartupLocation="CenterScreen"
+        
         Title="Calculator" 
         Height="515"
         Width="335"
         MinHeight="506"
-        MinWidth="320"
-        WindowStartupLocation="CenterScreen"
-        Background="{StaticResource Window.Background}">
+        MinWidth="320">
+
+    <WindowChrome.WindowChrome>
+        <WindowChrome
+            ResizeBorderThickness="{Binding ResizeBorderThickness}"
+            CaptionHeight="{Binding TitleHeight}"
+            GlassFrameThickness="0"/>
+    </WindowChrome.WindowChrome>
+
+    <Window.Resources>
+        <Style TargetType="{x:Type local:MainWindow}">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Window}">
+                        <!--Outer border with the drop shadow margin-->
+                        <Border Padding="{Binding OuterMarginSizeThickness, FallbackValue=10}">
+
+                            <!--Window border, shadow and main background-->
+                            <Border Background="{StaticResource Window.Background}" BorderBrush="{StaticResource Window.BorderBrush}" BorderThickness="1">
+                                <Border.Effect>
+                                    <DropShadowEffect Color="{StaticResource Window.Shadow}"  ShadowDepth="0" Opacity="1"/>
+                                </Border.Effect>
+
+                                <!--Main window content-->
+                                <Grid>
+                                    <Grid.RowDefinitions>
+                                        <!--Title bar-->
+                                        <RowDefinition Height="{Binding TitleHeightGridLength, FallbackValue=30}"/>
+                                        <!--Window content-->
+                                        <RowDefinition Height="*"/>
+                                    </Grid.RowDefinitions>
+
+                                    <!--Title bar-->
+                                    <Grid Grid.Row="0" Background="Green">
+                                        <Grid.ColumnDefinitions>
+                                            <!--Title-->
+                                            <ColumnDefinition Width="*"/>
+                                            <!--Window buttons-->
+                                            <ColumnDefinition Width="auto"/>
+                                        </Grid.ColumnDefinitions>
+
+                                        <!--Title-->
+                                        <TextBlock Text="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Title}" />
+
+                                        <!--Window buttons-->
+                                        <StackPanel Grid.Column="1" Orientation="Horizontal">
+                                            <Button Content="_" Command="{Binding MinimizeCommand}" Style="{StaticResource WindowControlButton}"/>
+                                            <Button Content="[ ]" Command="{Binding MaximizeCommand}" Style="{StaticResource WindowControlButton}"/>
+                                            <Button Content="X" Command="{Binding CloseCommand}" Style="{StaticResource WindowControlButton}"/>
+                                        </StackPanel>
+                                    </Grid>
+
+                                    <!--Window content-->
+                                    <!--"Views" for various calculators are displayed here-->
+                                    <ContentControl Grid.Row="1">
+                                        <local:StandartCalculatorControl/>
+                                    </ContentControl>
+                                </Grid>
+                            </Border>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Window.Resources>
     
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="40"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-
-        <!--Top panel-->
-        <StackPanel Orientation="Horizontal">
-            <!--Side drop down menu-->
-            <Button
-                Content="☰"
-                FontSize="16"
-                Width="40"/>
-
-            <!--Calculator name-->
-            <TextBlock 
-                Text="Standart" 
-                FontSize="20" 
-                VerticalAlignment="Center"
-                Margin="15,0,15,0"/>
-
-            <!--Side drop down menu-->
-            <Button
-                Content="◳"
-                FontSize="20"
-                Width="40"/>
-        </StackPanel>
-
-        <!--"Views" for various calculators are displayed here-->
-        <ContentControl Grid.Row="1">
-            <local:StandartCalculatorControl/>
-        </ContentControl>
-    </Grid>
 </Window>
